# LCMGoCloud_GenBI

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/src/: config.py  main.py  middleware.py
backend/src/api/: admin.py  auth.py  chat_history.py  connections.py  context.py  dashboard.py  deep_enrichment.py  discovery.py  enrichment.py  lab.py  local_auth.py  poc.py  query.py  query_instructions.py  relationships.py
backend/src/connectors/: __init__.py  base.py  mssql.py  mysql.py  postgresql.py
backend/src/db/: migrations.py  session.py
backend/src/models/: audit.py  connection.py  dashboard.py  discovery.py  poc.py  (+5 more)
backend/tests/: test_ai_enrichment.py  test_api_connections.py  test_api_context.py  test_api_discovery.py  test_api_enrichment.py  test_api_enrichment_extra.py  test_api_query.py  test_api_relationships.py  test_auth.py  test_auth_service.py  test_connection_manager.py  test_connectors.py  test_context_generator.py  test_context_generator_full.py  test_deep_enrichment.py  test_deep_enrichment_no_examples.py  test_discovery_engine.py  test_discovery_engine_full.py  test_discovery_queries.py  test_enrichment_models.py  test_example_queries.py  test_executor_full.py  test_health.py  test_lab.py  test_middleware.py  test_models.py  test_query_engine.py  test_query_engine_full.py  test_query_executor.py  test_query_instructions.py  test_query_validator.py  test_sample_extractor.py  test_sample_extractor_full.py  test_score_calculator.py  test_score_calculator_full.py  test_secrets_client.py  test_user_manager.py
(+232 files in other folders)
